--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.hdr filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
